[package]
name = "volume_match_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
tfhe = { version = "0.2.3", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }
itertools = "0.8"

[profile.dev]
opt-level = 3
